--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.material:material:1.2.0-alpha03'
     implementation 'com.google.android.material:material:1.0.0'
+    /*room*/
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+/*video*/
+    implementation 'com.github.p32929:MyHouseAdsAndroid:1.0.2'
+
+
     //recycler view
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 /*retrofit*/
@@ -48,4 +54,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
 //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+//   video play
+    implementation 'com.google.android.exoplayer:exoplayer:2.8.4'
+/*youtube качество видео*/
+    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:1.9.0'
 }
