--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ allprojects {
         
     }
 }
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
