--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".detail_video.DetailVideoActivity"></activity>
+
+        <activity android:name=".detail_video.VideoActivity"/>
+<!--            android:configChanges="orientation|screenSize"-->
+
 
         <receiver android:name=".internet.InternetCheck">
             <intent-filter>
