--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
 }
 
 dependencies {
+
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -58,4 +60,12 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.8.4'
 /*youtube качество видео*/
     implementation 'com.github.HaarigerHarald:android-youtubeExtractor:1.9.0'
+
+//    room
+    implementation "androidx.room:room-runtime:2.2.3"
+    implementation "androidx.room:room-ktx:2.2.3"
+
+// Coroutines
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+
 }
